--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,9 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  overflow: hidden;
+  height: 100%;
+  touch-action: none; /* evita gestos en móviles */
 }
 
 body {
